examples/type_system/failing/129_orphan_constructor_pattern_statement.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

Some(x);
let after = 1
